# COG-object-exporter

./: .gitignore  CMakeLists.txt  Mesh.cpp  Mesh.h  main.cpp  test.mtl
COG-object-exporter/COG-object-exporter/: COG_object_exporter.1  Material.cpp  Material.h  main.cpp
COG-object-exporter/COG-object-exporter.xcodeproj/: project.pbxproj
COG-object-exporter/COG-object-exporter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
COG-object-exporter/COG-object-exporter.xcodeproj/project.xcworkspace/xcuserdata/Vianney.xcuserdatad/: UserInterfaceState.xcuserstate
COG-object-exporter/COG-object-exporter.xcodeproj/xcuserdata/Vianney.xcuserdatad/xcschemes/: COG-object-exporter.xcscheme  xcschememanagement.plist
COG-object-exporter/DerivedData/COG-object-exporter/: info.plist
COG-object-exporter/DerivedData/COG-object-exporter/Index/COG-object-exporter.xcindex/: db.xcindexdb  db.xcindexdb.strings-dir  db.xcindexdb.strings-file  db.xcindexdb.strings-res  db.xcindexdb.strings-sym
COG-object-exporter/DerivedData/COG-object-exporter/Logs/Debug/: C6A63386-AC94-431E-812D-87528D2DEC5D.xcactivitylog  Cache.db
COG-object-exporter/DerivedData/COG-object-exporter/Logs/Issues/: Cache.db  E1F5A538-7142-4362-A727-6C248A019E26.xcactivitylog
